--- a/DM2025-Lab1-Master.ipynb
+++ b/DM2025-Lab1-Master.ipynb
@@ -10,16 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\ntone\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data] Downloading package punkt to /Users/rcu0613/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
      ]
     }
    ],
